adapt chain_id to chain change
