# internal/app/api/rest/api_support.go
@@ -61,7 +61,7 @@ func (ctl *ApiSupportController) FailTxsList(c *gin.Context) {
 // @Param   page_num    query   int true    "page num" Default(1)
 // @Param   page_size   query   int true    "page size" Default(10)
 // @Param   tx_hash     query   string    false "tx_hash"
-// @Param   chain_id     query   string    false "chain_id"
+// @Param   chain     query   string    false "chain"
 // @Success 200 {object} vo.RelayerTxFeesResp	"success"
 // @Router /data/relayers_fee/api_support [get]
 func (ctl *ApiSupportController) RelayerTxsFee(c *gin.Context) {
